[package]
name = "sclan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22"
tui = "0.17"
unicode-width = "0.1"
gethostname = "0.2.2"
clipboard = "0.5.0"
time = { version = "0.3.7", features = ["formatting", "macros", "local-offset"] }
textwrap = { version = "0.15", default-features = false, features = ["unicode-width"] }
tokio = { version = "1.17.0", features = ["rt"] }
