[package]
name = "sclan"
version = "0.2.0"
edition = "2021"
license = "BSD-3-Clause-Clear"
keywords = ["network", "utility", "quic", "p2p", "productivity"]
categories = ["network-programming", "command-line-utilities"]
repository = "https://github.com/Flaise/sclan"
readme = "README.md"
description = "Simple Communication over Local Area Network"
exclude = ["screenshots/"]

[dependencies]
crossterm = "0.22"
tui = "0.17"
unicode-width = "0.1"
gethostname = "0.2.2"
clipboard = "0.5.0"
time = { version = "0.3.7", features = ["formatting", "macros", "local-offset"] }
textwrap = { version = "0.15", default-features = false, features = ["unicode-width"] }
tokio = { version = "1.17.0", features = ["rt", "time", "net", "macros", "fs", "io-util"] }

# 2.32MB straight up to 7.51MB with one dependency...
qp2p = { version = "0.28.5", default-features = false }

